nvpy (2.0.0-1) unstable; urgency=medium

  * New upstream release
  * Add dependency on python3-simplenote
  * Refresh all patches
  * Add yapf3 code formatter as build dependency
  * Set debhelper to v9 in control to match specified requirement
  * Add Vcs-Browser
  * Remove simplenote.py from copyright (now external package)
  * Update standards version
  * Use /usr/bin/python3 to launch script
  * Change section to utils: does not depend on non-free software

 -- Stefan van der Walt <stefanv@berkeley.edu>  Thu, 19 Sep 2019 16:31:56 -0700

nvpy (1.0.0+git20171203.c91062c-1) unstable; urgency=low

  * Change Debian copyright format to point to https url
  * Fix watch file
  * Override lintian warning debian-watch-does-not-check-gpg-signature
  * Override lintian warning testsuite-autopkgtest-missing
  * Update maintainer email address
  * Update standards version to 4.1.3
  * Include fixes from upstream/master with latest bugfixes
  * New upstream release

 -- Stefan van der Walt <stefanv@berkeley.edu>  Thu, 18 Jan 2018 01:05:28 -0800

nvpy (0.9.7-1) unstable; urgency=medium

  * New upstream release
  * Add gbp configuration with upstream release tag
  * Refresh missing-config-debian-specific-warning patch
  * Remove patches locally after building
  * Update standards version to 3.9.6
  * Add man page

 -- Stefan van der Walt <stefan@sun.ac.za>  Tue, 08 Mar 2016 00:50:06 -0800

nvpy (0.9.5~git20130806-1) unstable; urgency=low

  * Initial release. (Closes: #725482)

 -- Stefan van der Walt <stefan@sun.ac.za>  Sun, 06 Oct 2013 16:22:43 +0200