@@ -1,3 +1,2 @@
-/usr/share/nvpy/nvpy/nvpy.py /usr/bin/nvpy
 /usr/share/nvpy/nvpy/vxlabs-nvpy.desktop /usr/share/applications/nvpy.desktop
 /usr/share/nvpy/nvpy/icons/nvpy_icon_256x256.png /usr/share/icons/hicolor/256x256/apps/nvpy.png
